<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nag Me!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_alarm">Create New Alarm</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="add_reminder">+ Add Reminder</string>
    <string name="deleted">Confirm Delete</string>
    <string name="undo">Undo</string>
    <string name="one_day">One day</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="asynergy">asynergy</string>
    <string name="zzz">ZZZ:</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss_target">dismiss target</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="choose_a_date">Choose a date.</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="choose_a_time">Choose a time.</string>
    <string name="name_of_alarm">Name of alarm:</string>
    <string name="snooze_time_in_minutes">Snooze time in minutes:</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="silent">Silent</string>
    <string name="next">Next</string>
    <string name="every">Every...</string>
    <string name="day_of_the_week">Day of the week...</string>
    <string name="edit">Edit</string>
    <string name="some_text_here">Some Text Here</string>
    <string name="_00_00">00:00</string>
    <string name="edit_blank_alarm">Edit blank alarm...</string>
    <string name="save">Save</string>

    <string-array name="which_week_options">
        <item> First </item>
        <item> Second </item>
        <item> Third </item>
        <item> Fourth </item>
    </string-array>

    <string-array name="day_options">
        <item> Sunday </item>
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
    </string-array>
    <color name ="orange">#FF4A1C</color>
    <color name ="teal"> #02798c </color>
    <color name = "black">#000000</color>
</resources>
