<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/one_day"
        style="@style/orangebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/one_day" />

    <Button
        android:id="@+id/daily"
        style="@style/orangebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/one_day"
        android:layout_marginTop="34dp"
        android:text="@string/daily" />

    <Button
        android:id="@+id/weekly"
        style="@style/orangebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/daily"
        android:layout_marginTop="34dp"
        android:text="@string/weekly" />

    <Button
        android:id="@+id/monthly"
        style="@style/orangebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weekly"
        android:layout_marginTop="34dp"
        android:text="@string/monthly" />


</RelativeLayout>