<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/reminder_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/reminder_item_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:text="@string/_00_00"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/alarm_item_sunday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/reminder_item_time"
            android:layout_toEndOf="@+id/reminder_item_time"
            android:layout_centerVertical="true"
            android:text="@string/s"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/alarm_item_monday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/alarm_item_sunday"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:text="@string/m"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/alarm_item_sunday" android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/alarm_item_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/alarm_item_monday"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:text="@string/t"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/alarm_item_monday" android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/alarm_item_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/alarm_item_tuesday"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:text="@string/w"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/alarm_item_tuesday" android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/alarm_item_thursday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/alarm_item_wednesday"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:text="@string/t"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/alarm_item_wednesday" android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/alarm_item_friday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/alarm_item_thursday"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:text="@string/f"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/alarm_item_thursday" android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/alarm_item_saturday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/alarm_item_friday"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:text="@string/s"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_toEndOf="@+id/alarm_item_friday" android:layout_marginStart="4dp"/>


        <Button
            android:id= "@+id/reminder_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_alignParentRight="true"

            android:layout_alignParentEnd="true"/>



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:visibility="gone"
        android:layout_gravity="center|start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txt_delete"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#ffd01e0f"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleted"
                android:clickable="false"
                android:hapticFeedbackEnabled="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:visibility="visible" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/txt_undo"
            android:text="@string/undo"
            android:clickable="false"
            android:layout_weight="2"
            android:textColor="#DD2ECCFA"
            android:gravity="center" />

    </LinearLayout>

</FrameLayout>